--- a/Tugas1/TUGAS1.html
+++ b/Tugas1/TUGAS1.html
@@ -18,7 +18,7 @@
     <hr>
 
     <h1 style="background-color:rgb(255, 99, 71);">TEMPAT TANGGAL LAHIR</h1>
-    <h1 style="font-family: 'Times New Roman', Times, serif;">02-04-2009</h1>
+    <h1 style="font-family: 'Times New Roman', Times, serif;">Bandung, 02-04-2009</h1>
 
     <hr>
 
